; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_init_libretro_symbols.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..retroarch.c_init_libretro_symbols.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.retro_core_t = type { i32 }

@last_core_type = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, %struct.retro_core_t*)* @init_libretro_symbols to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @init_libretro_symbols(i32 %0, %struct.retro_core_t* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.retro_core_t*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.retro_core_t* %1, %struct.retro_core_t** %5, align 8
  %6 = load i32, i32* %4, align 4
  %7 = load %struct.retro_core_t*, %struct.retro_core_t** %5, align 8
  %8 = call i32 @init_libretro_symbols_custom(i32 %6, %struct.retro_core_t* %7, i32* null, i32* null)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %12

11:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %12

12:                                               ; preds = %11, %10
  %13 = load i32, i32* %3, align 4
  ret i32 %13
}

declare dso_local i32 @init_libretro_symbols_custom(i32, %struct.retro_core_t*, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
